# ytdlprustygui-tauri

./: Cargo.toml  LICENSE  README.md  tauri.conf.json
.github/: FUNDING.yml
capabilities/: default.json
frontend/: index.html  main.js  styles.css
icons/: icon.icns
src/: lib.rs  main.rs
