[package]
name = "ytdlprustygui"
version = "0.2.0"
edition = "2024"
description = "A Tauri GUI frontend for yt-dlp"
authors = ["Jim Kelley"]

[lib]
name = "ytdlprustygui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt", "rt-multi-thread"] }

[profile.release]
strip = true      # Automatically strip symbols from binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
